# Seamless

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW.md  DS2_CUSTOM_SERVER_TECHNICAL_BREAKDOWN.md  LICENSE  PROCESS.md  README.md  deploypc2_joiner.bat  mappc2.bat  tmp_probe.bat  tmp_probe2.bat  tmp_probe3.bat
Release/: StartServer.bat  ds2_seamless_coop.ini
Release/Server/Saved/default/: config.json  public.key
docs/: DS2_PHANTOM_REMOVAL_RESEARCH.md  DS2_REVERSE_ENGINEERING_RESEARCH.md  HANDOFF_2026_04_06.md  SESSION_LOG_2026_03_17.md  SESSION_LOG_2026_04_01.md  SESSION_LOG_2026_04_03.md  SESSION_LOG_2026_04_04.md  SESSION_LOG_2026_04_06.md  SESSION_LOG_2026_04_16.md
include/: address_resolver.h  addresses.h  hooks.h  mod.h  network.h  pattern_scanner.h  session.h  sync.h  ui.h  utils.h
launcher/: CMakeLists.txt  main.cpp  simple_launcher.cpp
server/Saved/default/: config.json  database.sqlite  private.key  public.key
src/: CMakeLists.txt
src/core/: dllmain.cpp  mod.cpp
src/hooks/: game_state_hooks.cpp  network_hooks.cpp  session_hooks.cpp
src/network/: packet_handler.cpp  peer_manager.cpp
src/session/: session_manager.cpp
src/sync/: player_sync.cpp  progress_sync.cpp
src/ui/: overlay.cpp  renderer.cpp  title_notifier.cpp
src/utils/: address_resolver.cpp  logger.cpp  memory.cpp  pattern_scanner.cpp
tools/: ghidra_analysis.py  ghidra_phantom_return.py  ghidra_results.txt
